<resources>
    <string name="app_name">Agenda</string>
    <string name="item1_nav">Actividad 1</string>
    <string name="item2_nav">Actividad 2</string>
    <string name="item3_nav">Actividad 3</string>
    <string name="titulo_nv">NavigationDrawer con Actividades</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="acessar">Acessar</string>
    <string name="criar_conta">Ainda não tem uma conta? Crie agora.</string>
    <string name="criar_nova_conta">Criar nova conta.</string>
    <string name="novo_nome">Nome</string>
    <string name="proximo">Próximo</string>
    <string name="login">Já tenho uma conta.</string>
    <string name="bemVindo">Bem-vindo</string>
    <string name="criarEvento">Criar Evento</string>
    <string name="NomeEvento">Nome do Evento</string>
    <string name="data">01/01/2022</string>
    <string name="hora">00:00</string>
    <string name="LocalEvento">Local</string>
    <string name="descricao">Detalhes</string>
    <string name="salvar">Salvar</string>


    <string name="title_activity_menu_lateral">menu_lateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sua Agenda</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gerencia">Gerencie aqui a sua rotina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment">Flagmento</string>
</resources>